# server/app/posts/routes.py
@@ -15,6 +15,7 @@ import requests
 import uuid
 import io,base64
 from .. import basic_auth
+import app.utils.remote_funcs as rf
 
 @bp.route("/posts/restricted", methods=["GET"])
 def get_restricted_users():    
@@ -229,35 +230,75 @@ def get_my_posts():
 
     return jsonify(data) # data
 
+# Grabs posts that were sent from an author's inbox
 @bp.route('/posts', methods=['GET'])
 @basic_auth.login_required
 def index():
+    print("index")
     data = ""
     try:
         # Retrieve data from the request's JSON body
-        print("data")        
         author_id = request.args.get('author_id')        
         # print(author_id)
         conn, curr = get_db_connection()
         
         # Get all the posts from people who I'm following + posts who are public + posts that are mine
         # Do not include posts that I'm restricted from
-        query = "SELECT posts.author_id, username, posts.post_id, date_posted, title, content_type, content, image_id, visibility " \
-                "FROM posts " \
-                "INNER JOIN authors ON posts.author_id = authors.author_id " \
-                "WHERE " \
-                    "(posts.visibility = 'public' " \
-                    "OR posts.author_id = %s " \
-					 "OR(posts.visibility = 'friends-only' AND posts.author_id IN (SELECT author_followee FROM friends WHERE author_following = %s))) " \
-                    "AND post_id NOT IN (SELECT post_id FROM post_restrictions WHERE restricted_author_id =  %s) " \
-                "ORDER BY date_posted DESC; " 
+        query = "SELECT * FROM inbox_items " \
+                "WHERE recipient_id = %s " \
+                "AND type = 'Post' "
         
-        curr.execute(query, (author_id, author_id, author_id))
+        curr.execute(query, (author_id,))
         row = curr.fetchall()                                
         posts = [dict(i) for i in row]        
+        
+        local_posts = list() # Turn this into a tupple after
+        payload = list()        
 
-        data = posts
-        # data = json.dumps(posts, indent=4, sort_keys=True, default=str)
+        # posts.author_id, username, posts.post_id, date_posted, title, content_type, content, image_id, visibility
+        for post in posts:
+            if post['sender_host'] == 'https://cmput-average-21-b54788720538.herokuapp.com/':
+                try:                    
+                    new_item = rf.get_post('https://cmput-average-21-b54788720538.herokuapp.com/api/', post['sender_id'], post['object_id'], 'CtrlAltDefeat', 'string')
+                    payload.append(new_item)
+
+                except Exception as e:
+                    print("Api call error")
+                    print(e)
+                    pass # Skip if it somehow does not work
+
+            elif post['sender_host'] == 'https://cmput404-project-backend-tian-aaf1fa9b20e8.herokuapp.com/':
+                try:                    
+                    new_item = rf.get_post('https://cmput404-project-backend-tian-aaf1fa9b20e8.herokuapp.com/', post['sender_id'], post['object_id'], 'cross-server', 'password')
+                    
+                    payload.append(new_item)
+
+                except Exception as e:
+                    print("Api call error")
+                    print(e)
+                    pass # Skip if it somehow does not work
+            else:                          
+                local_posts.append(post["object_id"])
+
+        print("hi")
+        print("local:", local_posts)
+
+        if len(local_posts):
+            query = "SELECT posts.*, username FROM posts " \
+                    "JOIN authors " \
+                    "on posts.author_id = authors.author_id " \
+                    "AND post_id NOT IN (SELECT post_id FROM post_restrictions WHERE restricted_author_id =  %s) " \
+                    f"WHERE post_id in %s"
+            
+            curr.execute(query, (author_id, tuple(local_posts)))
+
+            row = curr.fetchall()                                
+            local_results = [dict(i) for i in row]       
+
+            payload.extend(local_results)
+
+        data = payload        
+        print("data:", data)
 
     except Exception as e:
         print(e)
@@ -327,7 +368,7 @@ def get_image(author_id, post_id):
     try:
         query = "SELECT content, content_type,visibility from posts WHERE post_id = %s AND author_id = %s"
         curr.execute(query, (post_id, author_id))
-        row = curr.execute(query, (post_id, author_id)).fetchone()
+        row = curr.fetchone()
         if row is None:
             abort(404, "The post with this post_id does not exist.")
         print("Successfully found post.")
@@ -417,6 +458,31 @@ def edit_post(author_id, post_id):
 def categories():
     return "Test route for /posts"
 
+# (LOCAL) Call this instead for getting individual posts in the front end
+@bp.route("/authors/<author_id>/posts/<post_id>/display", methods=["GET"])
+def get_post_display(author_id, post_id):   
+    print(request.root_url + "api/authors/" + author_id + "/posts/" + post_id) 
+    data = requests.get(request.root_url + "api/authors/" + author_id + "/posts/" + post_id)
+    
+    if data.status_code == 404: # If post not found, try remote posts
+        try:
+            data = requests.get("https://cmput404-project-backend-tian-aaf1fa9b20e8.herokuapp.com" + "/authors/" + author_id + "/posts/" + post_id, auth=("cross-server", "password"))
+            
+            if data.status_code == 200:
+                return data.json()
+        except Exception as e:
+            print(e)
+        
+        try:
+            data = requests.get("https://cmput-average-21-b54788720538.herokuapp.com/api" + "/authors/" + author_id + "/posts/" + post_id, auth=("CtrlAltDefeat", "string"))
+            
+            if data.status_code == 200:
+                return data.json()
+        except Exception as e:
+            print(e)
+
+    return data.json() if data.status_code == 200 else abort(404)
+
 # (REMOTE) 
 @bp.route("/authors/<author_id>/posts/<post_id>", methods=["GET"])
 # Gets an individual post
@@ -430,21 +496,7 @@ def get_post(author_id, post_id):
                 "AND (visibility = 'public' OR visibility = 'unlisted')"
                 
         curr.execute(query, (post_id, ))
-        row = curr.fetchall()
-        if len(row) == 0:
-            print("not found locally, trying remote")
-            try:
-                print(f"https://cmput404-project-backend-tian-aaf1fa9b20e8.herokuapp.com/authors/{author_id}/posts/{post_id}")
-                res = requests.get(f"https://cmput404-project-backend-tian-aaf1fa9b20e8.herokuapp.com/authors/{author_id}/posts/{post_id}", auth=("cross-server", "password"))
-                
-                if res.status_code == 404:
-                    abort(404, "Post not found")       
-                
-                return res.json()
-
-            except Exception as e:
-                print(e)
-                print("Something went wrong")            
+        row = curr.fetchall()            
 
         post = [dict(i) for i in row][0]       
         # print(post) 
@@ -460,11 +512,11 @@ def get_post(author_id, post_id):
 
         item = dict()
         item["type"] = "post"
-        item["id"] = request.root_url + "authors/" + post["author_id"] + "/posts/" + post["post_id"]
+        item["id"] = request.root_url + "api/authors/" + post["author_id"] + "/posts/" + post["post_id"]
         
         # No idea what these are, skip for now
-        item["source"] = request.root_url + "authors/" + post["author_id"] + "/posts/" + post["post_id"]
-        item["origin"] = request.root_url + "authors/" + post["author_id"] + "/posts/" + post["post_id"]
+        item["source"] = request.root_url + "api/authors/" + post["author_id"] + "/posts/" + post["post_id"]
+        item["origin"] = request.root_url + "api/authors/" + post["author_id"] + "/posts/" + post["post_id"]
         item["description"] = None
         item["contentType"] = post["content_type"]   
         item["content"] = post["content"]        
@@ -473,8 +525,8 @@ def get_post(author_id, post_id):
         author_item = dict()
         author_item["type"] = "author"
         author_item["host"] = request.root_url
-        author_item["id"] = request.root_url + row["author_id"]
-        author_item["url"] = request.root_url + row["author_id"]
+        author_item["id"] = request.root_url + "api/authors/"  + row["author_id"]
+        author_item["url"] = request.root_url + "api/authors/" + row["author_id"]
         author_item["displayName"] = row["username"]
         author_item["github"] = ("https://github.com/" + row["github"]) if row["github"] != None else None
         author_item["profileImage"] = None
@@ -482,7 +534,8 @@ def get_post(author_id, post_id):
         item["author"] = author_item
 
         # We don't have these rn
-        item["categories"] = None
+        item["categories"] = []
+        item["count"] = 0
         item["comments"] = None
         item["commentsSrc"] = None
 
@@ -491,7 +544,14 @@ def get_post(author_id, post_id):
         # Convert datetime object to ISO 8601 format with UTC offset
         item["published"] = post["date_posted"].strftime("%Y-%m-%d %H:%M:%S") 
 
-        item["visibility"] = post["visibility"].upper()
+        visibility = post["visibility"]
+
+        # Either public or friends only. cant be private
+        if visibility == "public" or visibility == "unlisted":
+            item["visibility"] = "PUBLIC" # both are technically public?
+        else:
+            item["visibility"] = "FRIENDS"
+
         item["unlisted"] = True if post["visibility"] == "unlisted" else False
 
        #  data = json.dumps(item, indent=2)
@@ -500,7 +560,7 @@ def get_post(author_id, post_id):
 
     except IndexError as e:
         print(e)
-        data = "invalid"
+        abort(404, "Post not found")
 
     except Exception as e:
         print(e)
@@ -519,7 +579,7 @@ def get_posts(author_id):
     try:
         query = "SELECT * FROM posts " \
                 "WHERE author_id = %s " \
-                "AND (visibility = 'public') " \
+                "AND visibility != 'private' " \
                 "ORDER BY date_posted LIMIT %s OFFSET %s "
         
         if page is not None:
@@ -536,8 +596,11 @@ def get_posts(author_id):
         row = curr.fetchall()                                        
         posts = [dict(i) for i in row]    
 
+        if len(posts) == 0:
+            abort(404, "Post not found")
+
         payload = dict()
-        payload["type"] = "authors"
+        payload["type"] = "posts"
         payload["items"] = []
 
         query = "SELECT * FROM authors " \
@@ -549,11 +612,12 @@ def get_posts(author_id):
         for post in posts:
             item = dict()
             item["type"] = "post"
-            item["id"] = request.root_url + "authors/" + post["author_id"] + "/posts/" + post["post_id"]
+            item["title"] = post["title"]
+            item["id"] = request.root_url + "api/authors/" + post["author_id"] + "/posts/" + post["post_id"]
             
             # No idea what these are, skip for now
-            item["source"] = request.root_url + "authors/" + post["author_id"] + "/posts/" + post["post_id"]
-            item["origin"] = request.root_url + "authors/" + post["author_id"] + "/posts/" + post["post_id"]
+            item["source"] = request.root_url + "api/authors/" + post["author_id"] + "/posts/" + post["post_id"]
+            item["origin"] = request.root_url + "api/authors/" + post["author_id"] + "/posts/" + post["post_id"]
             item["description"] = None
             item["contentType"] = post["content_type"]        
             item["content"] = post["content"]        
@@ -562,8 +626,8 @@ def get_posts(author_id):
             author_item["type"] = "author"
             author_item["host"] = request.root_url
             
-            author_item["id"] = request.root_url + post["author_id"]
-            author_item["url"] = request.root_url + post["author_id"]
+            author_item["id"] = request.root_url + "api/authors/" + post["author_id"]
+            author_item["url"] = request.root_url + "api/authors/" + post["author_id"]
             author_item["displayName"] = author["username"]
             author_item["github"] = ("https://github.com/" + author["github"]) if author["github"] != None else None
             author_item["profileImage"] = None
@@ -571,8 +635,9 @@ def get_posts(author_id):
             item["author"] = author_item
 
             # We don't have these rn
-            item["categories"] = None
+            item["categories"] = []
             item["comments"] = None
+            item["count"] = 0
             item["commentsSrc"] = None
 
             # input_datetime = post["date_posted"].strptime(post["date_posted"], "%Y-%m-%d %H:%M:%S")
@@ -580,7 +645,15 @@ def get_posts(author_id):
             # Convert datetime object to ISO 8601 format with UTC offset
             item["published"] = post["date_posted"].strftime("%Y-%m-%d %H:%M:%S") 
 
-            item["visibility"] = post["visibility"].upper()
+            # if item["visibility"]
+            visibility = post["visibility"]
+
+            # Either public or friends only. cant be private
+            if visibility == "public" or visibility == "unlisted":
+                item["visibility"] = "PUBLIC" # both are technically public?
+            else:
+                item["visibility"] = "FRIENDS"
+
             item["unlisted"] = True if post["visibility"] == "unlisted" else False
 
             payload["items"].append(item)
